--- a/provision/default.yml
+++ b/provision/default.yml
@@ -12,6 +12,9 @@ server_admin: d.schultheis@kabel-salat.net
 #
 # Enable/disable automatic virtualbox guest additions update
 #
+# You generally don't need to enable this option unless the current version of your
+# vagrant box is really old and uses an outdated version of the virtualbox guest additions.
+#
 vbguest_auto_update: false
 
 #
@@ -56,7 +59,7 @@ project_folder: typo3-website
 purge_project_folder: "no"
 
 #
-# TYPO3 Database
+# TYPO3 Database settings
 #
 db_root_password: root
 db_host: localhost
@@ -66,6 +69,9 @@ db_pass: typo3
 
 #
 # TYPO3 core extensions to be enabled.
+#
+# If you are installing TYPO3 7.6 please make sure that non existent extensions
+# like 'rte_ckeditor' are disabled. In TYPO3 7.6 use 'rtehtmlarea' instead.
 #
 typo3_extensions:
   - about
@@ -126,6 +132,11 @@ typo3_community_extensions:
 #
 # https://docs.typo3.org/typo3cms/CoreApiReference/ApiOverview/Mail/Index.html
 #
+# For additional information about MailHog please visit the MailHog Git repository
+# at github
+#
+# https://github.com/mailhog/MailHog
+#
 typo3_mail_transport: sendmail
 
 typo3_mail_smtp_server: localhost:1025
@@ -171,6 +182,10 @@ reset_db_on_provision: true
 #
 # Linked Clone for Vagrant v1.8
 #
+# For more information about this option check the Vagrant documentation
+#
+# https://www.vagrantup.com/docs/virtualbox/configuration.html#linked-clones
+#
 linked_clone: false
 
 #
@@ -184,7 +199,8 @@ composer:
 # Additional composer packages to install
 #
 # Note: If you install a TYPO3 version below 8.7 you will need to add helhum/typo3-console
-# as it is not in the default requirements of the TYPO3 distribution package
+# as it is not in the default requirements of the TYPO3 distribution package that is
+# used for provisioning.
 #
 composer_packages: []
 #  - {composer_package: helhum/typo3-console, constraint: ~}
