Run mailhog as systemd service instead of using SysVInit

--- a/provision/playbooks/handlers.yml
+++ b/provision/playbooks/handlers.yml
@@ -9,7 +9,7 @@
 
 - name: restart mailhog
   become: yes
-  service: name=mailhog state=restarted
+  systemd: name=mailhog state=restarted
 
 - name: flush privileges
   become: yes
