--- a/configuration.yml
+++ b/configuration.yml
@@ -68,6 +68,11 @@ db_user: typo3
 db_pass: typo3
 
 #
+# Allow root login though phpMyAdmin
+#
+phpmyadmin_allow_root: true
+
+#
 # TYPO3 core extensions to be enabled.
 #
 # If you are installing TYPO3 7.6 please make sure that non existent extensions
